--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -11,9 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -65,4 +65,23 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+/* .todoItem{
+  border: 2px solid #f4f4f4;
+  font-size: 24px;
 }
+
+.todosContainer{
+  width: 40%;
+  margin: 0 auto
+}
+
+.App{
+  text-align: center;
+  padding: 12px;
+}
+
+.App h1{
+  font-size: 36px;
+} */
